# dotobot

./: .env.template  .gitignore  README.md  boot.bat  index.py  log.conf  logConfig.json  main.py  pyproject.toml  util.py
cogs/: example.py  example_cog.py
entities/: __init__.py  cog.py  ping.py  pingGroup.py  quote.py  user.py
extensions/: democracy.py  example.py  ping.py  quote.py  quotes.py  system.py
lib/: errors.py  util.py
lib/entities/: __init__.py  cog.py  database.py  extension.py  pingGroup.py  quote.py  user.py
lib/parsing/: __init__.py  command.py  core.py  errors.py  match.py  signature.py  tokenizer.py  typecasting.py
lib/steam/: __init__.py  client.py  errors.py  game.py  user.py
lib/utility/: __init__.py  errors.py  extensions.py  search.py  ui.py  utility.py  wrappers.py
steam/: client.py  errors.py  game.py  user.py
